crates/rooch-framework-tests/tests/cases/object/object_cap.exp
processed 3 tasks

task 1 'publish'. lines 3-21:
status EXECUTED

task 2 'run'. lines 22-36:
Error: error: resource type "TestObject" in function "0x2::context::new_object" not defined in current module or not allowed
   ┌─ /tmp/tempfile:29:19
   │
29 │         let obj = context::new_object<TestObject>(ctx, object);
   │                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: resource type "TestObject" in function "0x2::object::borrow" not defined in current module or not allowed
   ┌─ /tmp/tempfile:30:30
   │
30 │         let _borrow_object = object::borrow(&obj);
   │                              ^^^^^^^^^^^^^^^^^^^^

error: resource type "TestObject" in function "0x2::object::unpack" not defined in current module or not allowed
   ┌─ /tmp/tempfile:31:42
   │
31 │         let (_id, _owner, test_object) = object::unpack(obj);
   │                                          ^^^^^^^^^^^^^^^^^^^


